Fix #112184: Adapt optimized case of Points of Curve node for domain

Fix mistake in 000e722c7d99320ce51d1487147a2f275ae44b16. If domain is not
the curve, then result should be adopted to domain.

Pull Request: https://projects.blender.org/blender/blender/pulls/112185